--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: Symbiosis
 email: mbjones.89@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Where Science and Software meet.
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://mbjones.github.io/sss-web" # the base hostname & protocol for your site
+baseurl: "/sss-web" # the subpath of your site, e.g. /blog/
+url: "http://mbjones.github.io" # the base hostname & protocol for your site
 twitter_username: metamattj
 github_username:  mbjones
 
